--- a/style.css
+++ b/style.css
@@ -6,26 +6,8 @@ body {
   
   header h1 {
     text-align: center;
-    color: #66FCF1;
+    color: #6ffcf3;
   }
-  
-  @media (max-width: 600px) {
-    /* Adjust the layout for smaller screens */
-    body {
-        font-size: 14px;
-    }
-    header h1 {
-        font-size: 24px;
-    }
-    /*hide the navbar for small screen*/
-    nav{
-        display:none;
-    }
-    /* Add a scrollbar to the main content */
-    main {
-        overflow-y: scroll;
-    }
-}
 
   nav {
     text-align: center;
@@ -56,7 +38,6 @@ section#projects p{
     margin: 0;
     padding: 10px;
     font-size: 17px;
-    text-align: justify;
 }
 
 
@@ -67,8 +48,6 @@ section#contact {
 
 section#about p {
     display: flex;
-    margin-left: 10%;
-    margin-right: 10%;
     padding: 10px;
     text-align: center;
 }
@@ -151,4 +130,51 @@ padding: 20px 0;
     border: 3px solid #66FCF1;
 }
 
-  
+
+#scroll-button{
+  width:40px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 600px){
+    section#about p {
+      margin-left: 10%;
+      margin-right: 10%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  /* Changes for screens smaller than 600px */
+  nav li {
+      display: block;
+      margin-right: 0;
+      margin-bottom: 10px;
+  }
+  nav a {
+      font-size: 16px;
+  }
+  section#about p {
+      margin-left: 0%;
+      margin-right: 0%;
+  }
+  form input[type="text"], form input[type="email"], form textarea {
+      width: 80%;
+  }
+  form input[type="submit"] {
+      width: 80%;
+  }
+  .profile-pic img {
+      width: 150px;
+      height: 150px;
+  }
+  #scroll-button {
+      width: 30px;
+      padding: 5px 10px;
+      bottom: 20px;
+      right: 20px;
+  }
+}
