--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #020028;
     color: #e5e5e5;
     font-family: 'Consolas', monospace;
+    margin: 0px;
   }
   
   header h1 {
@@ -96,6 +97,10 @@ text-align: center;
 color: #66FCF1;
 }
 
+section#projects h2{
+  padding-top: 20px;
+}
+
 section p {
 line-height: 1.5;
 }
@@ -179,6 +184,12 @@ padding: 20px 0;
   }
   header h1{
     font-size: 3em;
+  }
+
+  section#about{
+    padding: 0px;
+    left: 5px;
+    right:5px;
   }
 
   .profile-pic img {
