--- a/kpbara.css
+++ b/kpbara.css
@@ -5,33 +5,29 @@ body {
     margin: 5%;
   }
 
-img{
+/* Default styles for desktop */
+.container {
     display: flex;
-  margin-left: 30%;
-  
-  margin-right: auto;
-  position: absolute;
-  bottom: 35%;
-  width: 30%;
+    justify-content: center;
+    align-items: center;
 }
 
-h1{
-    font-size: 9em;
-    position: absolute;
-    top: 50%;
+#words{
+    display: flex;
 }
 
-@media only screen and (max-width: 600px) {
-    img{
+/* Media query for mobile */
+@media only screen and (max-width: 1250px) {
+    .container {
         display: block;
-        margin-left: 10%;
+        margin-left: auto;
         margin-right: auto;
-        position: absolute;
-        bottom: 60%;
-        width: 80%;
+        width: 50%;
     }
-    h1{
-        font-size: 9em;
-        top: 50%;
+    #words{
+        display: block;
+        align-items: center;
+        text-align: center;
+        position: absolute;
     }
 }
